--- a/next.html
+++ b/next.html
@@ -6,7 +6,7 @@
 <link href="_css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-header role="banner">
+header role=<"banner">
       <h1>Comp 484</h1>
       <h2>Next Steps</h2>
       <nav role="navigation">
